# backend/routes/account.js
@@ -4,5 +4,6 @@ const accountController = require('../controllers/accountController.js');
 
 // Route definitions
 router.post('/', accountController.createAccountController);
+router.post('/login', accountController.loginAccountController);
 
 module.exports = router;
